trunk/Archive2/5c/70ab79e9755478/output
main.cpp:6:42: error: no type named 'type' in 'std::result_of<int (wat::*(int))(int)>'
    using is_it_int = std::result_of<y>::type;
                      ~~~~~~~~~~~~~~~~~~~^
main.cpp:7:5: error: unknown type name 'is_it_int'
    is_it_int foo = 5;
    ^
2 errors generated.
